# tarantula

./: .gitignore  Cargo.toml  README.md
examples/: add_url.js  scrap.js
tarantula-cli/: Cargo.toml
tarantula-daemon/: Cargo.toml  askama.toml
tarantula-daemon/src/: config.rs  database.rs  error.rs  main.rs  schema.sql  ws.rs
tarantula-daemon/src/database/: add_url.rs  mod.rs  next_work.rs  scrap_result.rs  search.rs
tarantula-daemon/src/routes/: coc.html  coc.rs  doc.html  doc.rs  error.html  faq.html  faq.rs  index.html  index.rs  main.css  mod.rs  search.html  url.html  url.rs
tarantula-daemon/src/routes/api/: mod.rs
tarantula-daemon/src/routes/doc/: api-url.html  endpoint.html  scrap.html
tarantula-scrapper/: Cargo.toml
tarantula-scrapper/src/: config.rs  main.rs
test/: README.md  add_urls.ts  bun.lockb  package.json  scrap.ts
